[gd_scene load_steps=6 format=2]

[ext_resource path="res://model/filter_material.tres" type="Material" id=1]
[ext_resource path="res://textures/example.png" type="Texture" id=2]
[ext_resource path="res://view/main_window.gd" type="Script" id=3]
[ext_resource path="res://view/export_panel.tscn" type="PackedScene" id=4]
[ext_resource path="res://view/about_panel.tscn" type="PackedScene" id=5]

[node name="MainWindow" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tabs" type="TabContainer" parent="MainPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditTab" type="HSplitContainer" parent="MainPanel/Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsMargin" type="MarginContainer" parent="MainPanel/Tabs/EditTab"]
margin_right = 134.0
margin_bottom = 564.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsContainer" type="VBoxContainer" parent="MainPanel/Tabs/EditTab/SettingsMargin"]
margin_left = 8.0
margin_top = 8.0
margin_right = 126.0
margin_bottom = 556.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Toolbar" type="VBoxContainer" parent="MainPanel/Tabs/EditTab/SettingsMargin/SettingsContainer"]
margin_right = 118.0
margin_bottom = 92.0
size_flags_horizontal = 3

[node name="ImportImgButton" type="Button" parent="MainPanel/Tabs/EditTab/SettingsMargin/SettingsContainer/Toolbar"]
margin_right = 118.0
margin_bottom = 20.0
hint_tooltip = "Import images into current project."
size_flags_horizontal = 3
text = "Import images..."

[node name="LoadProjButton" type="Button" parent="MainPanel/Tabs/EditTab/SettingsMargin/SettingsContainer/Toolbar"]
margin_top = 24.0
margin_right = 118.0
margin_bottom = 44.0
hint_tooltip = "Opens a projet file."
size_flags_horizontal = 3
text = "Load project..."

[node name="SaveProjButton" type="Button" parent="MainPanel/Tabs/EditTab/SettingsMargin/SettingsContainer/Toolbar"]
margin_top = 48.0
margin_right = 118.0
margin_bottom = 68.0
hint_tooltip = "Save current project to a file. Note: the input images are not saved into the new file, only their paths."
size_flags_horizontal = 3
text = "Save project..."

[node name="NewProjButton" type="Button" parent="MainPanel/Tabs/EditTab/SettingsMargin/SettingsContainer/Toolbar"]
margin_top = 72.0
margin_right = 118.0
margin_bottom = 92.0
size_flags_horizontal = 3
text = "New project"

[node name="ViewportContainer" type="PanelContainer" parent="MainPanel/Tabs/EditTab"]
margin_left = 146.0
margin_right = 1016.0
margin_bottom = 564.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel/Tabs/EditTab/ViewportContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 863.0
margin_bottom = 557.0

[node name="ViewportPanel" type="Panel" parent="MainPanel/Tabs/EditTab/ViewportContainer/VBoxContainer"]
margin_right = 856.0
margin_bottom = 526.0
rect_clip_content = true
size_flags_vertical = 3

[node name="Viewport" type="TextureRect" parent="MainPanel/Tabs/EditTab/ViewportContainer/VBoxContainer/ViewportPanel"]
material = ExtResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MainPanel/Tabs/EditTab/ViewportContainer/VBoxContainer"]
margin_top = 530.0
margin_right = 856.0
margin_bottom = 550.0

[node name="ZoomFitButton" type="Button" parent="MainPanel/Tabs/EditTab/ViewportContainer/VBoxContainer/HBoxContainer"]
margin_right = 66.0
margin_bottom = 20.0
text = "Zoom fit"

[node name="ZoomRealButton" type="Button" parent="MainPanel/Tabs/EditTab/ViewportContainer/VBoxContainer/HBoxContainer"]
margin_left = 70.0
margin_right = 143.0
margin_bottom = 20.0
text = "Zoom 1:1"

[node name="VSeparator" type="VSeparator" parent="MainPanel/Tabs/EditTab/ViewportContainer/VBoxContainer/HBoxContainer"]
margin_left = 147.0
margin_right = 151.0
margin_bottom = 20.0

[node name="ImageSelector" type="OptionButton" parent="MainPanel/Tabs/EditTab/ViewportContainer/VBoxContainer/HBoxContainer"]
margin_left = 155.0
margin_right = 729.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="ReloadImageButton" type="Button" parent="MainPanel/Tabs/EditTab/ViewportContainer/VBoxContainer/HBoxContainer"]
margin_left = 733.0
margin_right = 788.0
margin_bottom = 20.0
text = "Reload"

[node name="RemoveImageButton" type="Button" parent="MainPanel/Tabs/EditTab/ViewportContainer/VBoxContainer/HBoxContainer"]
margin_left = 792.0
margin_right = 856.0
margin_bottom = 20.0
text = "Remove"

[node name="ExportPanel" parent="MainPanel/Tabs" instance=ExtResource( 4 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="AboutPanel" parent="MainPanel/Tabs" instance=ExtResource( 5 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ImportImageDialog" type="FileDialog" parent="MainPanel"]
margin_left = 124.0
margin_top = 139.0
margin_right = 795.0
margin_bottom = 492.0
popup_exclusive = true
window_title = "Open File(s)"
resizable = true
dialog_hide_on_ok = true
mode = 1
access = 2
filters = PoolStringArray( "*.png ; PNG Images", "*.jpg ; JPG Images", "*.tga ; TGA Images" )
current_dir = "/Projects/Squad51ContentCreation/Tools/TilesGenerator2"
current_path = "/Projects/Squad51ContentCreation/Tools/TilesGenerator2/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadProjectDialog" type="FileDialog" parent="MainPanel"]
margin_left = 124.0
margin_top = 139.0
margin_right = 795.0
margin_bottom = 492.0
popup_exclusive = true
window_title = "Open a File"
resizable = true
dialog_hide_on_ok = true
mode = 0
access = 2
filters = PoolStringArray( "*.oldfilter" )
current_dir = "/Projects/Squad51ContentCreation/Tools/OldImageFilter"
current_path = "/Projects/Squad51ContentCreation/Tools/OldImageFilter/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveProjectDialog" type="FileDialog" parent="MainPanel"]
margin_left = 124.0
margin_top = 139.0
margin_right = 795.0
margin_bottom = 492.0
popup_exclusive = true
window_title = "Save Project"
resizable = true
dialog_hide_on_ok = true
access = 2
filters = PoolStringArray( "*.oldfilter" )
current_dir = "/Projects/Squad51ContentCreation/Tools/OldImageFilter"
current_path = "/Projects/Squad51ContentCreation/Tools/OldImageFilter/"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="tab_selected" from="MainPanel/Tabs" to="." method="_on_Tabs_tab_selected"]
[connection signal="pressed" from="MainPanel/Tabs/EditTab/SettingsMargin/SettingsContainer/Toolbar/ImportImgButton" to="." method="_on_ImportImgButton_pressed"]
[connection signal="pressed" from="MainPanel/Tabs/EditTab/SettingsMargin/SettingsContainer/Toolbar/LoadProjButton" to="." method="_on_LoadProjButton_pressed"]
[connection signal="pressed" from="MainPanel/Tabs/EditTab/SettingsMargin/SettingsContainer/Toolbar/SaveProjButton" to="." method="_on_SaveProjButton_pressed"]
[connection signal="pressed" from="MainPanel/Tabs/EditTab/SettingsMargin/SettingsContainer/Toolbar/NewProjButton" to="." method="_on_NewProjButton_pressed"]
[connection signal="pressed" from="MainPanel/Tabs/EditTab/ViewportContainer/VBoxContainer/HBoxContainer/ZoomFitButton" to="." method="_on_ZoomFitButton_pressed"]
[connection signal="pressed" from="MainPanel/Tabs/EditTab/ViewportContainer/VBoxContainer/HBoxContainer/ZoomRealButton" to="." method="_on_ZoomRealButton_pressed"]
[connection signal="item_selected" from="MainPanel/Tabs/EditTab/ViewportContainer/VBoxContainer/HBoxContainer/ImageSelector" to="." method="_on_ImageSelector_item_selected"]
[connection signal="pressed" from="MainPanel/Tabs/EditTab/ViewportContainer/VBoxContainer/HBoxContainer/ReloadImageButton" to="." method="_on_ReloadImageButton_pressed"]
[connection signal="pressed" from="MainPanel/Tabs/EditTab/ViewportContainer/VBoxContainer/HBoxContainer/RemoveImageButton" to="." method="_on_RemoveImageButton_pressed"]
[connection signal="files_selected" from="MainPanel/ImportImageDialog" to="." method="_on_ImportImageDialog_files_selected"]
[connection signal="file_selected" from="MainPanel/LoadProjectDialog" to="." method="_on_LoadProjectDialog_file_selected"]
[connection signal="file_selected" from="MainPanel/SaveProjectDialog" to="." method="_on_SaveProjectDialog_file_selected"]
